--- a/My Choice/index.html
+++ b/My Choice/index.html
@@ -12,18 +12,12 @@
     </header>
     <main>
       <form>
-        <!-- <input type="text" class="${operation.id}">
-            <span>${operation.sign}</span>
-            <input type="text"  class="${operation.id}">
-            <span>=</span>  -->
         <input type="text" disabled id="resultChoice" />
         <button id="bouttonResult">C'est Parti</button>
-      </form>
-
+      <!-- </form>
+      <img id="img" src="../images/boule_de_cristal.jpg"> -->
       <div id="randomChoiceContainer">
-        <!-- <div id="buttonContainer">
-          <button id="luckyButton">Voir mon avenir</button>
-        </div> -->
+       
       </div>
 
       <!-- <div class="counter">
